Update the index file

--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
       <div>
         <img src="images/placeholder-4by3.svg" alt="...">
       </div>
-
-      <div>
-        <dl>
-          <dt>Ages:</dt>
-          <dd>8+</dd>
-          <dt>Number players:</dt>
-          <dd>2-5</dd>
-          <dt>Length:</dt>
-          <dd>45 min</dd>
-        </dl>
+      <dl>
+        <dt>Ages:</dt>
+        <dd>8+</dd>
+        <dt>Number players:</dt>
+        <dd>2-5</dd>
+        <dt>Length:</dt>
+        <dd><time>45 min</time></dd>
+      </dl>
       </div>
       <div>
         <p>Average Rating: 4/5</p>
