--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Writer</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
@@ -11,10 +12,11 @@
       <h1>Super Epic Tile Layer</h1>
     </header>
 
-    <dl>
-      <dt>$35</dt>
-      <dd>(In stock)</dd>
-    </dl>
+    <ol>
+      <li>$35</li>
+      <li>(In stock)</li>
+    </ol>
+
     <div>
       <img src="images/placeholder-4by3.svg" alt="...">
     </div>
@@ -29,9 +31,9 @@
     <div>
       <p>Average Rating: 4/5</p>
     </div>
-    <div>
-      <p>[Add to Wishlist!]</p>
-      <p>[Add to Cart]</p>
+    <ul>
+      <li>[Add to Wishlist!]</li>
+      <li>[Add to Cart]</li>
     </div>
     <div>
       <p>You’re an ancient Egyptian God competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
