--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <ul>
       <li>[Add to Wishlist!]</li>
       <li>[Add to Cart]</li>
-    </div>
+    </ul>
     <div>
       <p>You’re an ancient Egyptian God competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
       <p>Super Epic Tile Layer is a tile-placement game where players draw a random tile and place the piece to continue the beautiful landscape of the Nile and Nile delta. Each tile must seamlessly continue the landscape while getting victory points by claiming important pieces of countryside and locations.</p>
@@ -57,14 +57,14 @@
     </div>
 
     <footer>
-    <h2>Reviews</h2>
-    <div>
-      <p>Thomas Schweitzer - 2012-12-12 - 4/5</p>
-      <q>Dieses Spiel ist super super-leichte, aber sehr lustig.</q>
-      <p>Natasha Stevens - 2012-04-15 - 5/5</p>
-      <q>This game is bloody amazing! My mates and I totally love playing it.</q>
-    </div>
-  </footer>
+      <h2>Reviews</h2>
+      <div>
+        <p>Thomas Schweitzer - 2012-12-12 - 4/5</p>
+        <q>Dieses Spiel ist super super-leichte, aber sehr lustig.</q>
+        <p>Natasha Stevens - 2012-04-15 - 5/5</p>
+        </q>This game is bloody amazing! My mates and I totally love playing it.</q>
+      </div>
+    </footer>
 
   </article>
 
