Edit the quotation indentations

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Thomas Schweitzer - 2012-12-12 - 4/5</p>
         <q>Dieses Spiel ist super super-leichte, aber sehr lustig.</q>
         <p>Natasha Stevens - 2012-04-15 - 5/5</p>
-        </q>This game is bloody amazing! My mates and I totally love playing it.</q>
+        <q>This game is bloody amazing! My mates and I totally love playing it.</q>
       </div>
     </footer>
 
