Add in the strong element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ol>
 
     <div>
-      <img src="images/placeholder-4by3.svg" alt="...">
+      <strong><img src="images/placeholder-4by3.svg" alt="..."></strong>
     </div>
     <dl>
       <dt>Ages:</dt>
